--- a/1-bar-chart/starter/bar-chart.css
+++ b/1-bar-chart/starter/bar-chart.css
@@ -1,3 +1,7 @@
+body {
+  background-color: rgb(226 232 240);
+} 
+
 .header {
   height: 60px;
   display: flex;
@@ -15,4 +19,11 @@
 
 main {
   padding: 1rem;
+  margin: 1rem auto;
+  width: 96%;
+  background-color: white;
+}
+
+main .canvas {
+  margin: 0 auto
 }
